<resources>
    <string name="app_name">Educaty</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">Pages you view in incognito tabs won’t stick around in your browser’s history, cookie store, or search history after you’ve closed all of your incognito tabs. Any files you download or bookmarks you create will be kept.  However, you aren’t invisible. Going incognito doesn’t hide your browsing from your employer, your internet service provider, or the websites you visit.</string>
    <string name="MyNameSample">Anwar Samir</string>
    <string name="spinner_prompt">OK</string>
    <string name="pname">Abdulrahman Radwan</string>
    <string name="pdiscription">Math Teacher</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="logo_text">L</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_password_link">Forgot Password?</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="fb_icon">Facebook icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="signup">Sign Up </string>
    <string name="hodlername">Abdulrahman</string>
    <string name="classattendance">Math Attendance</string>
    <string name="teacher_name">Mr.Ali</string>
    <string name="footer_button_close">Close</string>
    <string name="footer_button_confirm">Confirm</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="WidgetTitle">EDUCATY</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="chatActivity">chatActivity</string>
    <string name="anonymous">anonymous</string>
    <string name="lottoFont">fonts/Lato-Light.ttf</string>
    <string name="imageType">image/jpeg</string>
    <string name="imagePickerString">Complete action using</string>
    <string name="successuploaing">sucess uploading</string>
    <string name="faileduplaod">failed to upload</string>
    <string name="errorphotopicker">error photo picker</string>
    <string name="printChoosePhoto">choose a photo</string>
    <string name="homePostDate">EEE, d MMM yyyy, HH:mm</string>
    <string name="commentDate">EEE,HH:mm</string>
    <string name="printNotLogined">you are not logined</string>
    <string name="printSavedStudent">saved current student</string>
    <string name="printSavedTeacher">saved current teacher</string>
    <string name="boldfont">fonts/Font-Bold.otf</string>
    <string name="positiveBehav">Positive behavior</string>
    <string name="grades">Grades</string>
    <string name="HomeF">Home</string>
    <string name="groupStudentsF">Students</string>
    <string name="QuizzesF">Quizzes</string>
    <string name="ProgressF">Progress</string>
    <string name="notAllowedForStudents">not allowed for students</string>
    <string name="clickToAddStudentMenu">clicked add student menu</string>
    <string name="AddButton">Add</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_post_content">Enter Post Content</string>
    <string name="school_name">school Name</string>
    <string name="number">Number</string>
    <string name="curriculum">curriculum</string>
    <string name="level">level</string>
    <string name="doneButton">Done</string>
    <string name="add_your_comment">Add Your Comment</string>
    <string name="abdulrhman">Abdulrhman</string>
    <string name="ui_ux_designer_android_developer">UI/UX Designer | Android Developer</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="first_name">First Name</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="comment_name">Anwar Samir</string>
    <string name="the_comment">this the comment</string>
    <string name="connection_name">Name</string>
    <string name="connection_disc">Teacher</string>
    <string name="get_started">Get Started</string>
    <string name="sans_serif_font">sans-serif-smallcaps</string>
    <string name="group_name">Group Name</string>
    <string name="message">Message</string>
    <string name="messangerName">Name</string>
    <string name="posterName">text</string>
    <string name="post_time">2 minute ago</string>
    <string name="postContent">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley</string>
    <string name="studentLogin">Student</string>
    <string name="teacher_login">Teacher</string>
    <string name="student_login">Student Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_register">Or Register?</string>
    <string name="teacher_login1">Teacher Login</string>
    <string name="profile_name">Abdulrahman</string>
    <string name="profile_title">UI/UX Designer | Android Developer</string>
    <string name="message_button">Message</string>
    <string name="_9096">9096</string>
    <string name="connections">CONNECTIONS</string>
    <string name="_2">2</string>
    <string name="_1782">1782</string>
    <string name="badges">BADGES</string>
    <string name="skills">Skills</string>
    <string name="grid_item_name">Abdulrahman</string>
    <string name="skills_name">ICDL Technology specialist</string>
    <string name="studnet_name">anwar</string>
    <string name="student_name_group">anwar</string>
    <string name="title">Title</string>
    <string name="feild">Feild</string>
    <string name="next_button">Next</string>
    <string name="profile">Profile</string>
    <string name="groups">Groups</string>
    <string name="imagenewpost">this is the image of a new post</string>
    <string name="button_new_post">click the button to add new post</string>
    <string name="imagenewgroup">this is the image of the new group</string>
    <string name="button_new_group">click the button to add a group</string>
    <string name="click_to_add_new_comment">click to add new comment</string>
    <string name="click_to_add_new_group">click to add new Group</string>
    <string name="this_is_the_profile_image">this is the profile image</string>
    <string name="add_to_register_student">add to Register student</string>
    <string name="click_to_send_a_message">click to send a message</string>
    <string name="comment_image">this is the commenter image</string>
    <string name="connection_image">this is the connection image</string>
    <string name="add_to_close_dialog">add to close dialog</string>
    <string name="click_to_confirm">click to confirm</string>
    <string name="click_to_go_to_login_screen">click to go to login screen</string>
    <string name="group_image">group image</string>
    <string name="g_item_image">group item image</string>
    <string name="user_image">poster image</string>
    <string name="post_image">post image</string>
    <string name="teacher_login_button">teacher login button</string>
    <string name="click_to_login_as_a_student">click to login as a student</string>
    <string name="click_to_sign_student">click to sign student</string>
    <string name="sign_teacher">click to sign as teacher</string>
    <string name="navimage">image of user in nav header</string>
    <string name="all_student_image_profile">all student image profile</string>
    <string name="recycler_teacher_log">Recycler Teacher</string>
    <string name="image_groups">image view for my groups</string>
    <string name="logo_splash_disc">the logo image to introduce the App</string>
    <string name="add_image_message">click to add image message</string>
    <string name="image_widget">click to go to groups activity</string>
    <string name="sync_widget">click to sync data in widget</string>
    <string name="message_image">message image</string>
    <string name="click_to_view_and_add_comments">click to view and add comments</string>
    <string name="sign_google">click to sign in with google</string>
    <string name="sign_facebook">click to sign in with facebook</string>
    <string name="image_profile_disc">image profile for the usr</string>
    <string name="skills_icon">image icon fo r skills</string>
    <string name="click_to_take_attendance">click to take attendance</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="library">Library</string>
    <string name="timeline">Timeline</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="add_student">Add Student</string>
    <string name="logout">Logout</string>
    <string name="add_to_upvote_for_this_skill">add to upVote for this skill</string>
    <string name="endorse">endorse</string>
    <string name="recycler_teacher_log_class">Recycler Teacher</string>
    <string name="tid">tid</string>
    <string name="gtag">GTAG</string>
    <string name="chatTag">chatActivity</string>
    <string name="homeTag">key</string>
    <string name="sTag">STAG</string>
    <string name="click_to_add_new_post">click to add new post</string>
    <string name="image_pick_type">image/jpeg</string>
    <string name="image_action">Complete action using</string>
    <string name="sign_in_succes">sign in success</string>
    <string name="sign_fail">sign in failed</string>
    <string name="success_uploading">sucess uploading</string>
    <string name="pcik">Complete action using</string>
    <string name="STAG">STAG</string>
    <string name="signed">signed in</string>
    <string name="fill_blanks">fill your email and password</string>
    <string name="token_google">998044084954-k0i8s3vo7dsf5c3cuefdmqrn09bcavcb.apps.googleusercontent.com</string>
    <string name="log_sing">signInWithEmail:success</string>
    <string name="check_mail_pass">check your email and password</string>
    <string name="log_conn_fail">onConnectionFailed:</string>
    <string name="log_fire_goog">firebaseAuthWithGoogle:</string>
    <string name="log_fireauth_success">signInWithCredential:success</string>
    <string name="log_sign_failed">signInWithCredential:failure</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="TAG">createSTAG</string>
    <string name="image_type">image/jpeg</string>
    <string name="comp_action">Complete action using</string>
    <string name="must_filled">all filds must be filled</string>
    <string name="suc_uploa">sucess uploading</string>
    <string name="already_here">this accoount already exist</string>
    <string name="not_need_new">this account already existed</string>
    <string name="saved_s">saved Student</string>
    <string name="faild_s">faild regist Student</string>
    <string name="invalid_s">invalid info to Register</string>
    <string name="not">not logined</string>
    <string name="check">check your email for verification</string>
    <string name="suc">createUserWithEmail:success</string>
    <string name="fail">createUserWithEmail:failure</string>
</resources>