<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friendsicon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/group"
            android:title="@string/groups" />

        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/progress"
            android:title="@string/progress" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/library"
            android:title="@string/library" />

        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/timeline"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/settings" />


        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />


    </group>


</menu>
