<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_home_posts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asi.educatyapp.Data.View.Activities.AddHomePosts">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_marginTop="@dimen/margin_top_larg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/ivGroupitem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/imagenewgroup"
                android:onClick="AddGroupPost"
                android:src="@drawable/imagepost" />
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/etGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/editeback"
            android:hint="@string/enter_group_name"
            android:padding="12dp" />

        <Button
            android:id="@+id/add_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="15dp"

            android:background="@drawable/roundedbtn"
            android:contentDescription="@string/button_new_group"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/AddButton"

            android:textAllCaps="false" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_above="@+id/mainlayout"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_alignParentTop="true"
        android:id="@+id/animation_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
