<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Recycler_activity_comment__home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.asi.educatyapp.View.Activities.Comment_Home">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3f3f3"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_alignBottom="@id/Recycler_activity_comment__home">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/commenttv"
            android:layout_weight="1"
            android:background="@drawable/editeback"
            android:padding="10dp"
            android:layout_margin="3dp"
            android:layout_marginTop="50dp"
            android:hint="@string/add_your_comment"
            android:layout_marginBottom="100dp"

            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/AddButton"
            android:id="@+id/addComment"
            android:textStyle="bold"
            android:contentDescription="@string/click_to_add_new_comment"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/black"
            android:backgroundTintMode="src_over"
            android:textAllCaps="true"
            android:padding="10dp"
            android:layout_weight=".3"
            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>

