<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/teacherbg"
        android:scaleType="centerCrop"></FrameLayout>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout"
        android:orientation="vertical">

        <com.asi.educatyapp.Data.customfonts.MyTextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/teacher_login1"
            android:textColor="#4c565f"
            android:textSize="29dp"

            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacheremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">

            <com.asi.educatyapp.Data.customfonts.MyEditText
                android:id="@+id/emailInputteacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:gravity="left"
                android:hint="@string/email"
                android:maxLength="25"
                android:padding="12dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colorhint"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacherpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">


            <com.asi.educatyapp.Data.customfonts.MyEditText

                android:id="@+id/passwordinputteacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colorhint"
                android:textSize="16dp"


                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"

            >

            <CheckBox
                android:id="@+id/stremember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="2"
                android:buttonTint="@color/colorhint"
                android:checked="false"
                android:text="@string/remember_me"
                android:textColor="@color/colorhint"
                android:textSize="11dp"


                />

            <com.asi.educatyapp.Data.customfonts.MyTextView
                android:id="@+id/forgotpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.3"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/colorhint"
                android:textSize="11dp"

                />


        </LinearLayout>


        <com.asi.educatyapp.Data.customfonts.MyTextView
            android:id="@+id/signin1"
            android:contentDescription="@string/sign_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rect1"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16dp"


            />


        <com.asi.educatyapp.Data.customfonts.MyTextView
            android:id="@+id/orrigestteacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/acc"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:lines="2"
            android:text="@string/or_register"
            android:textColor="@color/colorhint"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_marginBottom="16dp"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/rectfb"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/fb" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/rectgoogle"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/googleiconT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/google" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
