<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".23">

            <com.asi.educatyapp.Data.View.CustomViews.CircleImageView
                android:contentDescription="@string/connection_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/logoHealthy"
                android:scaleType="centerCrop"
                android:src="@drawable/mypic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".77"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/linerfirst"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:drawablePadding="5dp"
                    android:id="@+id/nameTv" />
                <!--<Views.AsiTextView-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_disc"
                    android:textSize="13sp"
                    android:textColor="#000"
                    android:drawablePadding="5dp"
                    android:id="@+id/time" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#f3f3f3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


</LinearLayout>
